--- a/210191_project_notebook.ipynb
+++ b/210191_project_notebook.ipynb
@@ -4447,6 +4447,116 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from scipy.optimize import minimize\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# Load the company overview data\n",
+        "file_path = \"ticker-overview.csv\"  # Replace with your CSV path\n",
+        "data = pd.read_csv(file_path)\n",
+        "\n",
+        "# Step 1: Filter companies based on various criteria\n",
+        "def filter_companies(df):\n",
+        "    # Step 1: Filter for companies with positive long-term growth (deltaInYear > 1)\n",
+        "    df = df[df['deltaInYear'] > 1]\n",
+        "    print(f\"Step 1: Positive long-term growth: {len(df)} rows remaining\")\n",
+        "\n",
+        "    # Step 2: Ensure companies have recent growth (deltaInMonth > 3% and deltaInWeek > 1%)\n",
+        "    df = df[(df['deltaInMonth'] > 0.03) & (df['deltaInWeek'] > 0.01)]\n",
+        "    print(f\"Step 2: Recent growth: {len(df)} rows remaining\")\n",
+        "\n",
+        "    # Step 3: Select companies with high stock ratings (stockRating > 3.5)\n",
+        "    df = df[df['stockRating'] > 3.5]\n",
+        "    print(f\"Step 3: High stock ratings: {len(df)} rows remaining\")\n",
+        "\n",
+        "    # Step 4: Ensure market liquidity (outstandingShare > median)\n",
+        "    if len(df) > 0:\n",
+        "        median_outstanding = df['outstandingShare'].median()\n",
+        "        df = df[df['outstandingShare'] > median_outstanding]\n",
+        "        print(f\"Step 4: Market liquidity: {len(df)} rows remaining\")\n",
+        "\n",
+        "    # Step 5: Diversify portfolio based on companyType\n",
+        "    if len(df) > 0:\n",
+        "        diversified = (\n",
+        "            df.groupby('companyType', group_keys=False)\n",
+        "              .apply(lambda x: x.nlargest(3, 'stockRating'))  # Select top 3 by rating within each group\n",
+        "        )\n",
+        "        print(f\"Step 5: Diversified portfolio: {len(diversified)} rows selected\")\n",
+        "        return diversified\n",
+        "\n",
+        "    return df  # Return empty DataFrame if all rows are filtered out\n",
+        "\n",
+        "# Apply filtering\n",
+        "selected_companies = filter_companies(data)\n",
+        "\n",
+        "# Display the selected portfolio\n",
+        "print(\"Selected Portfolio:\")\n",
+        "print(selected_companies)\n",
+        "\n",
+        "# Save the portfolio to a new CSV file\n",
+        "selected_companies.to_csv(\"selected_portfolio.csv\", index=False)\n"
+      ],
+      "metadata": {
+        "id": "2HjP1a4ALiLK",
+        "outputId": "130e905d-318c-4d91-edea-ab8b7da64bec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Step 1: Positive long-term growth: 43 rows remaining\n",
+            "Step 2: Recent growth: 31 rows remaining\n",
+            "Step 3: High stock ratings: 9 rows remaining\n",
+            "Step 4: Market liquidity: 4 rows remaining\n",
+            "Step 5: Diversified portfolio: 3 rows selected\n",
+            "Selected Portfolio:\n",
+            "      Unnamed: 0 exchange                  shortName  industryID  \\\n",
+            "1233        1233     HOSE        Thiết bị Siêu Thanh       312.0   \n",
+            "538          538    UPCOM  Đầu tư XD Dân dụng Hà Nội       336.0   \n",
+            "297          297    UPCOM     Cấp thoát nước Cần Thơ       277.0   \n",
+            "\n",
+            "      industryIDv2                       industry   industryEn  \\\n",
+            "1233        9574.0            Công nghệ Thông tin   Technology   \n",
+            "538         8633.0                   Bất động sản  Real Estate   \n",
+            "297         7577.0  Điện, nước & xăng dầu khí đốt    Utilities   \n",
+            "\n",
+            "      establishedYear  noEmployees  noShareholders  ...  deltaInMonth  \\\n",
+            "1233           1994.0        563.0           882.0  ...         0.637   \n",
+            "538            2013.0        202.0           165.0  ...         0.257   \n",
+            "297            2004.0        456.0           232.0  ...         0.064   \n",
+            "\n",
+            "     deltaInYear  outstandingShare  issueShare  companyType  ticker  status  \\\n",
+            "1233       1.651              25.7        25.7           CT     ST8     NaN   \n",
+            "538        4.025              24.6        24.6           CT     XDH     NaN   \n",
+            "297        1.139              28.0        28.0           CT     CTW     NaN   \n",
+            "\n",
+            "      code message traceId  \n",
+            "1233   NaN     NaN     NaN  \n",
+            "538    NaN     NaN     NaN  \n",
+            "297    NaN     NaN     NaN  \n",
+            "\n",
+            "[3 rows x 24 columns]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-2-1da37a3302e7>:34: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+            "  .apply(lambda x: x.nlargest(3, 'stockRating'))  # Select top 3 by rating within each group\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
