--- a/210191_project_notebook.ipynb
+++ b/210191_project_notebook.ipynb
@@ -740,7 +740,7 @@
         "id": "pgnoY9BHZTAm",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 650
+          "height": 399
         },
         "outputId": "34d1e4b0-1e24-4c97-c58c-95c91a09fe0c"
       },
@@ -903,7 +903,7 @@
         "id": "oHMqK7auWsKA",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 423
+          "height": 614
         },
         "outputId": "640f6877-31e6-47e2-cc46-c612e40a2dc5"
       },
@@ -2101,7 +2101,7 @@
         "id": "q2SsHXy5v2y7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 650
+          "height": 399
         },
         "outputId": "c603d8cc-e106-41ae-c514-f0f6d22f7fd1"
       },
@@ -2222,7 +2222,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 599
+          "height": 368
         },
         "id": "X1flfXWvPhZU",
         "outputId": "09246b40-30f7-4dd4-e4dc-2ca5d46ce423"
@@ -3307,7 +3307,7 @@
         "id": "VlVKmi4tq_mp",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 637
+          "height": 391
         },
         "outputId": "18e87351-0eac-4450-beab-d0615bc1e42f"
       },
@@ -3453,7 +3453,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 423
+          "height": 461
         },
         "id": "wKrN6Z7_ITm1",
         "outputId": "217f0edc-8db9-414d-f32d-8731c0fa0cd4"
@@ -4502,13 +4502,13 @@
         "selected_companies.to_csv(\"selected_portfolio.csv\", index=False)\n"
       ],
       "metadata": {
-        "id": "2HjP1a4ALiLK",
-        "outputId": "130e905d-318c-4d91-edea-ab8b7da64bec",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2HjP1a4ALiLK",
+        "outputId": "9967defc-0eca-4d25-f931-af5cb4091b28"
       },
-      "execution_count": 2,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -4552,8 +4552,76 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-2-1da37a3302e7>:34: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+            "<ipython-input-19-1da37a3302e7>:34: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
             "  .apply(lambda x: x.nlargest(3, 'stockRating'))  # Select top 3 by rating within each group\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df = pd.read_csv(\"selected_portfolio.csv\")\n",
+        "\n",
+        "def evaluate_profit_potential(df, base_price=100, time_frame='year'):\n",
+        "\n",
+        "    # Define which column to use for growth rate based on time_frame\n",
+        "    growth_rate_column = {\n",
+        "        'year': 'deltaInYear',\n",
+        "        'month': 'deltaInMonth',\n",
+        "        'week': 'deltaInWeek'\n",
+        "    }\n",
+        "\n",
+        "    if time_frame not in growth_rate_column:\n",
+        "        raise ValueError(\"Invalid time frame. Choose from 'year', 'month', or 'week'.\")\n",
+        "\n",
+        "    growth_rate_col = growth_rate_column[time_frame]\n",
+        "\n",
+        "    # Perform calculations\n",
+        "    df['Base Price'] = base_price  # Assign a base price\n",
+        "    df['Projected Future Price'] = df['Base Price'] * (1 + df[growth_rate_col])\n",
+        "    df['Projected Profit'] = df['Projected Future Price'] - df['Base Price']\n",
+        "    df['Profit Percentage'] = (df['Projected Profit'] / df['Base Price']) * 100\n",
+        "\n",
+        "    print(f\"Profit potential evaluated over a {time_frame}.\")\n",
+        "    return df\n",
+        "\n",
+        "# Example Usage\n",
+        "time_frame = 'year'  # Change this to 'month' or 'week' as needed\n",
+        "base_price = 100  # Replace with an appropriate base price\n",
+        "selected_companies = evaluate_profit_potential(selected_companies, base_price=base_price, time_frame=time_frame)\n",
+        "\n",
+        "# Display results\n",
+        "print(\"Profit Potential for Selected Companies:\")\n",
+        "print(selected_companies[['ticker', 'shortName', 'Base Price', 'Projected Future Price', 'Projected Profit', 'Profit Percentage']])\n",
+        "\n",
+        "# Save to CSV\n",
+        "selected_companies.to_csv(\"selected_portfolio_with_profit.csv\", index=False)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IfHbbM3uXubv",
+        "outputId": "7db35ec5-b17a-4895-92d3-5bdd05055781"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Profit potential evaluated over a year.\n",
+            "Profit Potential for Selected Companies:\n",
+            "     ticker                  shortName  Base Price  Projected Future Price  \\\n",
+            "1233    ST8        Thiết bị Siêu Thanh         100                   265.1   \n",
+            "538     XDH  Đầu tư XD Dân dụng Hà Nội         100                   502.5   \n",
+            "297     CTW     Cấp thoát nước Cần Thơ         100                   213.9   \n",
+            "\n",
+            "      Projected Profit  Profit Percentage  \n",
+            "1233             165.1              165.1  \n",
+            "538              402.5              402.5  \n",
+            "297              113.9              113.9  \n"
           ]
         }
       ]
@@ -4562,6 +4630,11 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "collapsed_sections": [
+        "X1UhGQxF4rK2",
+        "eoUFCKE-5nI6",
+        "421dDEl48JCM"
+      ],
       "include_colab_link": true
     },
     "kernelspec": {
